// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CTALink Snapshots with a color passed in matches snapshot 1`] = `
<div
  class="CTA CTA--gray"
>
  <div
    class="CTA-link"
  >
    <router-link
      to="cta"
    >
      <div
        class="CTA-icon"
      >
        <img
          src="http://google.com"
        />
      </div>
       
      <h4
        class="CTA-title"
      >
        cta title
      </h4>
    </router-link>
     
    <!---->
  </div>
</div>
`;

exports[`CTALink Snapshots without a color passed in matches snapshot 1`] = `
<div
  class="CTA CTA--brown"
>
  <div
    class="CTA-link"
  >
    <router-link
      to="cta"
    >
      <div
        class="CTA-icon"
      >
        <img
          src="http://google.com"
        />
      </div>
       
      <h4
        class="CTA-title"
      >
        cta title
      </h4>
    </router-link>
     
    <!---->
  </div>
</div>
`;
